# surrealdb-migrations

./: .dockerignore  .gitignore  LICENSE  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml
deployment/docker/: Dockerfile  build.sh
doc/: conf.py  deployment.rst  developer.rst  index.rst  user.rst
lib/surrealdb-migrations/: __init__.py  __main__.py  args.py
lib/surrealdb_migrations/: __init__.py  __main__.py  args.py  base.py  config.py  migrations.py
lib/surrealdb_migrations/data/: config.toml
test/: config.toml  conftest.py  pytest.ini  requirements.txt  test_upgrade.py  test_version.py
test/migrations/: 2026-02-05T17_11_27_944133_00_00_test.py  2026-02-11T16_16_45_667846_00_00_test_migration.py  2026-02-13T16_17_26_112716_00_00_test_migration.py  2026-02-15T16_22_58_175825_00_00_test_do_create.py  2026-02-16T16_18_11_543340_00_00_test_migration.py
