[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"surrealdb-migrations.data" = ["**/*"]

[tool.setuptools.packages.find]
where = ["lib"]

[project]
name = "surrealdb-migrations"
version = "0.1.0"
authors = [{name = "Hewlett Packard Enterprise Development LP", email = "sdk_tools_frameworks@groups.ext.hpe.com"}]
description = "SurrealDB migrations tool"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

dependencies = [
    "setproctitle",
    "colorlog",
]

[project.scripts]
surrealdb-migrations = "surrealdb-migrations.__main__:main"
