[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"surrealdb_migrations.data" = ["**/*"]

[tool.setuptools.packages.find]
where = ["lib"]

[project]
name = "surrealdb_migrations"
version = "0.1.0"
authors = [{name = "Hewlett Packard Enterprise Development LP", email = "sdk_tools_frameworks@groups.ext.hpe.com"}]
description = "SurrealDB migrations tool"
readme = "README.rst"
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "setproctitle",
    "colorlog",
    "tomli",
    "surrealdb>=1.0.8",
    "objns",
]

[project.urls]
Homepage = "https://github.com/HPENetworking/surrealdb-migrations/"

[project.scripts]
surrealdb_migrations = "surrealdb_migrations.__main__:main"
